--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "simple-git": "^3.27.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
