finisched image conversion and storage

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "redis": "^4.7.0",
+    "sharp": "^0.33.5",
     "simple-git": "^3.27.0",
     "winston": "^3.17.0"
   },
